@@ -240,8 +240,6 @@ static int gen_listener_info (EXPOSITION *exp, struct metric *metric,
 			      METRIC_LABELS *pfx, struct json_value *obj);
 static int gen_backends_count (EXPOSITION *exp, struct metric *metric,
 			       METRIC_LABELS *pfx, struct json_value *obj);
-static int gen_service_info (EXPOSITION *exp, struct metric *metric,
-			     METRIC_LABELS *pfx, struct json_value *obj);
 static int gen_service_enabled (EXPOSITION *exp, struct metric *metric,
 				METRIC_LABELS *pfx, struct json_value *obj);
 static int gen_backend_state (EXPOSITION *exp, struct metric *metric,
@@ -273,11 +271,6 @@ static struct metric_family listener_metric_families[] = {
 };
 
 static struct metric_family service_metric_families[] = {
-  { "pound_service_info",
-    "info",
-    NULL,
-    "Description of a service.",
-    gen_service_info },
   { "pound_service_enabled",
     "stateset",
     NULL,
@@ -346,6 +339,7 @@ struct metric_family_defn
   char const *attr;        /* JSON attribute that contains array of objects
 			      of this family. */
   char const *index_label; /* Label to hold index of the current object. */
+  char const *tag_label;   /* Label to hold tag of the current object. */
   int descend_family;      /* After handling each retrieved object, descend
 			      into that family. */
 };
@@ -363,14 +357,17 @@ struct metric_family_defn metric_family_defn[] = {
   { listener_metric_families,
     "listeners",
     "listener",
+    "listener_name",
     METRIC_FAMILY_SERVICE },
   { service_metric_families,
     "services",
     "service",
+    "service_name",
     METRIC_FAMILY_BACKEND },
   { backend_metric_families,
     "backends",
     "backend",
+    NULL,
     METRIC_FAMILY_NONE },
   { NULL }
 };
@@ -533,6 +530,16 @@ exposition_iterate (EXPOSITION *exp, METRIC_LABELS const *pfx, int fn,
       snprintf (nbuf, sizeof nbuf, "%zu", i);
       if ((res = metric_labels_add (&pfxcopy, defn->index_label, nbuf)) != 0)
 	break;
+      if (defn->tag_label)
+	{
+	  struct json_value *nv;
+	  if (json_object_get_name (jv, &nv) == 0 && nv->v.s && nv->v.s[0])
+	    {
+	      if ((res = metric_labels_add (&pfxcopy, defn->tag_label,
+					    nv->v.s)) != 0)
+		break;
+	    }
+	}
       if ((res = exposition_apply_family (exp, &pfxcopy, defn->family, jv)) != 0)
 	break;
       if (defn->descend_family != METRIC_FAMILY_NONE)
@@ -540,6 +547,8 @@ exposition_iterate (EXPOSITION *exp, METRIC_LABELS const *pfx, int fn,
 	  if ((res = exposition_iterate (exp, &pfxcopy, defn->descend_family, jv)) != 0)
 	    break;
 	}
+      if (defn->tag_label)
+	metric_labels_pop (&pfxcopy);
       metric_labels_pop (&pfxcopy);
     }
   metric_labels_free (&pfxcopy);
@@ -573,9 +582,6 @@ gen_listener_info (EXPOSITION *exp, struct metric *metric,
     return -1;
 
   if (json_object_get_name (obj, &jv))
-    return -1;
-  if (metric_labels_add (&samp->labels, "name",
-			 jv->type == json_string ? jv->v.s : ""))
     return -1;
 
   if (json_object_get_type (obj, "address", json_string, &jv))
@@ -646,24 +652,6 @@ gen_backends_count (EXPOSITION *exp, struct metric *metric,
   if (metric_labels_add (&samp->labels, "state", "active"))
     return -1;
   samp->number = n_active;
-  return 0;
-}
-
-static int
-gen_service_info (EXPOSITION *exp, struct metric *metric,
-		  METRIC_LABELS *pfx, struct json_value *obj)
-{
-  struct metric_sample *samp;
-  struct json_value *jv;
-
-  if (json_object_get_name (obj, &jv))
-    return -1;
-  if ((samp = metric_add_sample (metric, pfx)) == NULL)
-    return -1;
-  if (metric_labels_add (&samp->labels, "name",
-			 jv->type == json_string ? jv->v.s : ""))
-    return -1;
-  samp->number = 1;
   return 0;
 }
 
